# ChangeLog for net-misc/iputils
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/iputils/ChangeLog,v 1.36 2005/01/04 04:47:37 vapier Exp $

  03 Jan 2005; Mike Frysinger <vapier@gentoo.org> iputils-021109-r3.ebuild:
  Restore USE=doc with an extra check in case we're in the middle of a
  bootstrap #23156.

  03 Jan 2005; Mike Frysinger <vapier@gentoo.org> iputils-021109-r3.ebuild:
  Make sure linux/ipsec.h is usuable before building ipsec stuff #67569.

  03 Jan 2005; Mike Frysinger <vapier@gentoo.org>
  +files/021109-ipg-linux-2.6.patch, iputils-021109-r3.ebuild:
  Add support to ipg for newer kernels #71756 by Christoph M.

  06 Oct 2004; Travis Tilley <lv@gentoo.org>
  +files/iputils-021109-linux-udp-header.patch, iputils-021109-r3.ebuild:
  fix compiling iputils using newer glibc snapshots

  04 Aug 2004; Jon Portnoy <avenj@gentoo.org> iputils-021109-r3.ebuild :
  Fix bison sed line. Bugs 59414 and 59191.

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> iputils-020927.ebuild,
  iputils-021109-r3.ebuild:
  virtual/glibc -> virtual/libc

  28 Jun 2004; Brandon Hale <tseng@gentoo.org> iputils-021109-r3.ebuild:
  Stable on x86.

  15 Jun 2004; <solar@gentoo.org> iputils-021109-r3.ebuild,
  files/iputils-20020927-no-ether_ntohost.patch:
  added patch to allow iputils to compile with uclibc

  14 Jun 2004; Aron Griffis <agriffis@gentoo.org> iputils-020927.ebuild:
  Fix use invocation

*iputils-021109-r3 (24 Apr 2004)

  24 Apr 2004; Mike Frysinger <vapier@gentoo.org> :
  Remove racoon since (1) net-firewall/ipsec-tools installs this and
  (2) the packaged racoon has a nice remote DoS #48847.

*iputils-021109-r2 (07 Apr 2004)

  09 Apr 2004; Travis Tilley <lv@gentoo.org> iputils-021109-r1.ebuild:
  marked stable on amd64

  08 Apr 2004; Joshua Kinard <kumba@gentoo.org> iputils-020927.ebuild:
  Typo fix

  07 Apr 2004; Mike Frysinger <vapier@gentoo.org> :