@@ -1,11 +1,10 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 484743b0cc8d50291a99b17e467a9f53 ChangeLog 5380
-MD5 4cce9d9073915f2baa62895f6dc62a92 iputils-021109-r3.ebuild 2868
+MD5 11e6020fc82bd6316b4a1c824a739261 ChangeLog 5558
+MD5 78f016c49d7c098a5060e600da630898 iputils-021109-r3.ebuild 2239
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 MD5 d85216426f34d4e768ab8f9f48c66e4f files/021109-syserror.patch 324
-MD5 0a62fdeb93c761e5407fd3e185308a99 files/iputils-021109-pfkey.patch 3477
 MD5 c11c8762616b29e6d556a147aaa9374a files/021109-no-pfkey-search.patch 307
 MD5 2baac2d4f1c8f01957aaaf6b6349c203 files/021109-gcc34.patch 347
 MD5 66a524e27160410a2dbaef8d2eed5365 files/digest-iputils-021109-r3 73
@@ -13,9 +12,9 @@ MD5 79de65b9da536090d0560ba51520fd9d files/iputils-021109-linux-udp-header.patch
 MD5 c9986b4299c200260da8f025c5e4b0ea files/021109-ipg-linux-2.6.patch 981
 MD5 b4615612d4514f12b35fbaf27d3e04fe files/021109-uclibc-no-ether_ntohost.patch 635
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.9.10 (GNU/Linux)
+Version: GnuPG v1.9.14 (GNU/Linux)
 
-iD8DBQFB2ynQroRuSHgZdywRAjXWAJ9mayGJPfn2OqLfERVaW5ZCoXmpXQCcCz6C
-ObmOZ4HbFjidYwmhuidh1X0=
-=8f9/
+iD8DBQFB7bOKroRuSHgZdywRAs2UAJ97VMuvjb0qqi5wrQLhzWK9/HxJhQCfQXp3
+RM0U1St0wpUBy0LISdkX+Ng=
+=R+nw
 -----END PGP SIGNATURE-----
