@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/iputils/Attic/iputils-021109-r3.ebuild,v 1.18 2005/01/04 23:41:43 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/iputils/Attic/iputils-021109-r3.ebuild,v 1.19 2005/01/19 01:09:46 vapier Exp $
 
 inherit flag-o-matic gnuconfig eutils toolchain-funcs
 
@@ -16,8 +16,6 @@ IUSE="static ipv6 uclibc doc"
 
 DEPEND="virtual/libc
 	virtual/os-headers
-	sys-devel/bison
-	sys-devel/flex
 	dev-libs/openssl
 	sys-devel/autoconf
 	doc? (
@@ -34,7 +32,6 @@ src_unpack() {
 	unpack ${A}
 	cd ${S}
 
-	cp ${FILESDIR}/iputils-021109-pfkey.patch include-glibc/net/pfkeyv2.h
 	use static && append-ldflags -static
 
 	epatch ${FILESDIR}/${PV}-gcc34.patch
@@ -49,44 +46,25 @@ src_unpack() {
 	sed -i \
 		-e "/^CCOPT=/s:-O2:${CFLAGS}:" \
 		-e "/^CC=/s:.*::" \
-		Makefile \
-		|| die "sed Makefile opts failed"
-	sed -i \
 		-e '/^all:/s:check-kernel::' \
 		-e 's:-I$(KERNEL_INCLUDE)::' \
 		-e 's:-I/usr/src/linux/include::' \
-		Makefile libipsec/Makefile setkey/Makefile \
-		|| die "sed /usr/include failed"
+		Makefile \
+		|| die "sed Makefile failed"
 	use ipv6 || sed -i -e 's:IPV6_TARGETS=:#IPV6_TARGETS=:' Makefile
-
-	sed -i "s:-ll:-lfl ${LDFLAGS}:" setkey/Makefile || die "sed setkey failed"
-
-	sed -i 's:yacc:bison -y:' libipsec/Makefile #59191
 }
 
 src_compile() {
 	tc-export CC AR
-
-	# We have to make sure ipsec.h is usuable #67569
-	echo '#include <linux/ipsec.h>' > "${T}"/test.c
-	if ${CC} -c "${T}"/test.c >&/dev/null ; then
-		cd ${S}/libipsec
-		emake || die "libipsec failed"
-
-		cd ${S}/setkey
-		emake || die "setkey failed"
-	fi
-
-	cd ${S}
 	emake || die "make main failed"
 
 	# We include the extra check for docbook2html 
 	# because when we emerge from a stage1/stage2, 
 	# it may not exist #23156
 	if use doc && type -p docbook2html ; then
-		make html || die
+		emake -j1 html || die
 	fi
-	make man || die "make man failed"
+	emake -j1 man || die "make man failed"
 }
 
 src_install() {
@@ -95,7 +73,6 @@ src_install() {
 	use ipv6 && dobin ping6
 	dosbin arping
 	into /usr
-	[[ -x setkey/setkey ]] && dobin setkey/setkey
 	dosbin tracepath
 	use ipv6 && dosbin trace{path,route}6
 	dosbin clockdiff rarpd rdisc ipg tftpd
